--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,5 +1,27 @@
-* {
+/* * {
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
+} */
+
+body {
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+header {
+    margin-bottom: 4em;
+    border-bottom: 1px solid black;
+    box-shadow: 0px 2px gray;
+    
+}
+
+.title {
+    padding-top: .5em;
+    padding-bottom: .2em;
+    font-weight: 900;
+}
+
+.display-section {
+    text-align: center; 
 }
