--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,19 +1,15 @@
-/* * {
-    padding: 0%;
-    margin: 0%;
-    box-sizing: border-box;
-} */
+ 
 
 body {
     padding-left: 40px;
     padding-right: 40px;
+    background-color: #5A5A5A; 
 }
 
 header {
     margin-bottom: 4em;
     border-bottom: 1px solid black;
     box-shadow: 0px 2px gray;
-    
 }
 
 .title {
@@ -24,4 +20,11 @@ header {
 
 .display-section {
     text-align: center; 
+}
+
+li {
+    list-style-type: none;
+    padding-top: .5em;
+    padding-bottom: .5em;
+    font-weight: 700;
 }
